# eggtris-bot

./: .env.template  .gitignore  Cargo.toml  README.md  token.txt
src/: game_info.rs  main.rs  types.rs  websocket.rs
src/bot/: bot.rs  mod.rs  movement.rs  nakamuraas_voracity_bot.rs  slow_bot.rs
src/types/: game_event.rs  types.rs
src/utils/: board.rs  event_types.rs  game_info.rs  mod.rs  piece.rs  types.rs  websocket.rs
src/websocket/: event_types.rs
