[package]
name = "botris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures-util = "0.3.30"
tokio = { version = "1.39.2", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossterm = { version = "0.28.1", features = ["serde"] }
